--- a/Windows Server 2012/gtk-3.0/apps/nemo.css
+++ b/Windows Server 2012/gtk-3.0/apps/nemo.css
@@ -1,42 +1,50 @@
-/* nemo icon view entry */
-.nemo-window .nemo-window-pane widget.entry {
-    border: 1px solid;
-    border-radius: 0px;
-    color: @theme_fg_color;
-    border-color: @theme_selected_bg_color;
-    background-color: @theme_base_color; }
-  
-.nemo-window .nemo-window-pane widget.entry:selected:focus, .nemo-window .nemo-window-pane widget.entry:selected {
-    background-color: @theme_selected_bg_color;
-    color: @theme_selected_fg_color;
+/***********************
+ * pathbar breadcrumbs *
+ ***********************/
+NemoPathbarButton {
+    border-color: shade(@toolbar_bg_color, 0.8);
+    background-color: shade(@toolbar_bg_color, 1.08);
+    background-image: none;
+    color: @toolbar_fg_color;
+
+    -NemoPathbarButton-border-radius: 0px;
 }
 
-/* nemo sidebar padding */
-NemoWindow .sidebar .cell {
-    padding: 2px 2px; 
+NemoPathbarButton:active {
+    border-color: shade(@toolbar_bg_color, 0.8);
+    background-color: shade(@toolbar_bg_color, 0.95);
+    background-image: none;
 }
 
-filechooser placessidebar.sidebar,
-.nautilus-window placessidebar.sidebar {
-  background-color: @theme_bg_color; }
+NemoPathbarButton:hover {
+    border-color: shade(@toolbar_bg_color, 0.7);
+    background-color: shade(@toolbar_bg_color, 1.10);
+    background-image: none;
+}
 
-filechooser placessidebar.sidebar:backdrop,
-.nautilus-window placessidebar.sidebar:backdrop {
-    background-color: @theme_fg_color; }
+NemoPathbarButton:active:hover {
+    border-color: shade(@toolbar_bg_color, 0.7);
+}
 
-.nemo-window .sidebar {
-  background-color: @theme_bg_color; }
-.nemo-window .sidebar .view, .nemo-window .sidebar iconview, .nemo-window .sidebar row {
-  background-color: transparent; }
-.nemo-window .sidebar .view.cell:selected, .nemo-window .sidebar iconview.cell:selected, .nemo-window .sidebar row.cell:selected {
-  border-color: @theme_selected_bg_color;
-  background-color: @theme_selected_bg_color;
-  background-image: none;
-  color: @theme_selected_fg_color; }
-.nemo-window .sidebar .view.expander, .nemo-window .sidebar iconview.expander, .nemo-window .sidebar row.expander {
-  color: @theme_fg_color; }
-.nemo-window .sidebar .view.expander:hover, .nemo-window .sidebar iconview.expander:hover, .nemo-window .sidebar row.expander:hover {
-  color: shade(@theme_selected_bg_color, 1.15); }
-.nemo-window .sidebar separator {
-  background-color: transparent; }
+/*********************************
+ * sidebar disk space indicators *
+ *********************************/
+NemoPlacesTreeView {
+    -NemoPlacesTreeView-disk-full-bg-color: shade(@toolbar_bg_color, 0.8);
+    -NemoPlacesTreeView-disk-full-fg-color: @theme_selected_bg_color;
+    -NemoPlacesTreeView-disk-full-bar-width: 1px;
+    -NemoPlacesTreeView-disk-full-bar-radius: 0px;
+    -NemoPlacesTreeView-disk-full-bottom-padding: 2px;
+    -NemoPlacesTreeView-disk-full-max-length: 70px;
+}
 
+NemoPlacesTreeView:selected {
+    -NemoPlacesTreeView-disk-full-bg-color: @theme_selected_fg_color;
+    -NemoPlacesTreeView-disk-full-fg-color: shade(@theme_selected_bg_color, 1.4);
+}
+
+NemoPlacesTreeView:hover {
+}
+
+NemoPlacesTreeView:selected:hover {
+}
